Bug 364200 - korganizer 5.1.3 does not save change of appointment date.
Summary: korganizer 5.1.3 does not save change of appointment date.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 328145 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-11 05:51 UTC by Carioca
Modified: 2018-01-24 10:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carioca 2016-06-11 05:51:44 UTC
When I want to change the date of an appointment in korganizer 5.1.3 and type it (keyboard), and hit the ok button, the new date is not saved, instead it keeps the old date. I expect it to save the new date.
Comment 1 David Faure 2017-11-19 23:45:42 UTC
Indeed, confirmed, and fixed. https://phabricator.kde.org/D8908
Comment 2 David Faure 2017-11-19 23:47:37 UTC
*** Bug 328145 has been marked as a duplicate of this bug. ***
Comment 3 David Faure 2018-01-24 10:36:18 UTC
Git commit e716a6af3dd562288c02a20387ab5cee2069e95c by David Faure.
Committed on 24/01/2018 at 10:36.
Pushed by dfaure into branch 'master'.

KDateComboBox: fix dateChanged() not emitted after typing a date

Summary:
When editing an event in korganizer, if I was typing digits
to edit a date, rather than using another method (date popup; key_up;
etc.), then the change wouldn't be saved.

I would say that on focus-out or Key_Enter, we want to "commit"
the edited date into the final date as desired by the user, by emitting
dateEntered() and dateChanged(), to match the other edit methods.

The documentation clarifies what I think was the intent of the 3
signals, and the unittest checks that the signals are emitted
accordingly.

Test Plan: Unittest passes; korganizer use case is fixed.

Reviewers: cfeck, dvratil, mlaurent

Reviewed By: mlaurent

Subscribers: mlaurent, anthonyfieroni, #frameworks, #kde_pim

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8908

M  +68   -0    autotests/kdatecomboboxtest.cpp
M  +1    -0    autotests/kdatecomboboxtest.h
M  +16   -0    src/kdatecombobox.cpp
M  +5    -4    src/kdatecombobox.h

https://commits.kde.org/kwidgetsaddons/e716a6af3dd562288c02a20387ab5cee2069e95c